<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:id="@+id/textviewHistory"
            android:backgroundTint="@color/white"
            android:layout_gravity="center|end"
            android:textColor="@color/black"
            android:textSize="66sp"/>

        <TextView
            android:id="@+id/textviewResult"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_gravity="center|end"
            android:backgroundTint="@color/white"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="66sp" />


    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/btnAC"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/btnAC"
            android:textColor="@color/orange"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnDEL"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/btnDEL"
            android:textColor="@color/orange"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnChia"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/btnChia"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnNhan"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/btnNhan"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <Button
            android:id="@+id/nb7"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/nb7"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <Button
            android:id="@+id/nb8"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/nb8"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <Button
            android:id="@+id/nb9"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/nb9"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnTru"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/btnTru"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <Button
            android:id="@+id/nb4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/nb4"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <Button
            android:id="@+id/nb5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/nb5"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <Button
            android:id="@+id/nb6"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/nb6"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnCong"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/btnCong"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <Button
            android:id="@+id/nb1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/nb1"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <Button
            android:id="@+id/nb2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/nb2"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <Button
            android:id="@+id/nb3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/nb3"
            android:textColor="@color/black"
            android:textSize="40sp" />
        <Button
            android:id="@+id/btnBang"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_rowSpan="2"
            android:layout_rowWeight="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/btnBang"
            android:textColor="@color/orange"
            android:textSize="40sp" />

        <Button android:id="@+id/btnCham"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/btnCham"
            android:textColor="@color/black"
            android:textSize="40sp"/>

        <Button android:id="@+id/nb0"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:backgroundTint="@color/white"
            android:text="@string/nb0"
            android:textColor="@color/black"
            android:textSize="40sp"/>


    </GridLayout>
</LinearLayout>